<resources>
    <string name="app_name">TSA Randomizer Free</string>
    <string name="action_settings">Settings</string>
    <string name="tsaLeftOrRight">TSA Randomizer Free Version</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="share">Share</string>
    <string name="upgrade">Upgrade</string>
    <string name="click_here">Click Here</string>
    <string name="leftArrow">Left Arrow</string>
    <string name="rightArrow">Right Arrow</string>
    <string name="what_is_it">About TSA Randomizer</string>
    <string name="description">This is my version of a TSA Randomizer app that costs the US taxpayers $1.4 million dollars to make.
        It has been the subject of a number of news stories like the one below.</string>
    <string name="story">Click Here for Story</string>
    <string name="first_line">Let me recommend you an application</string>
    <string name="play_store_url">https://play.google.com/store/apps/details?id=com.danielburgnerjr.tsaleftorrightfree</string>
    <string name="choose_one">Choose one</string>
    <string name="market_premium">market://details?id=com.danielburgnerjr.tsaleftorrightpremium</string>
    <string name="play_store_premium">https://play.google.com/store/apps/details?id=com.danielburgnerjr.tsaleftorrightpremium</string>
    <string name="banner_ad_unit_id">ca-app-pub-8379108590476103/1103806072</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-8379108590476103~8627072871</string>
</resources>
