<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.danielburgnerjr.tsaleftorrightfree.MenuActivity"
    tools:showIn="@layout/activity_menu">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/tsa_lor_logo" />

    <TextView
        android:id="@+id/textAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="@string/tsaLeftOrRight" />

    <Button
        android:id="@+id/btnAbout"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/textAppName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#2f97ad"
        android:text="@string/about"
        android:textSize="30sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnAbout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#2f97ad"
        android:text="@string/start"
        android:textSize="30sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnShare"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnStart"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#2f97ad"
        android:text="@string/share"
        android:textSize="30sp"
        android:textColor="#fff" />

    <Button
        android:id="@+id/btnUpgrade"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@+id/btnShare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#2f97ad"
        android:text="@string/upgrade"
        android:textSize="30sp"
        android:textColor="#fff" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="@string/banner_ad_unit_id">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
